assets/css/nav-styles.css
/* Start navbar styles */
.container-nav {
  width: 100%;
  max-width: 80%;
  margin: auto;
  display: flex;
  justify-content: center;
}

/* Dark mode toggle button styles */
/* ----------------------------------------------- */
.toggle-bar {
  position: relative;
  display: inline-block;
  width: 58px;
  height: 24px;
}

#toggle-checkbox {
    opacity: 0;
    width: 0;
    height: 0;
  
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #20014D;
  -webkit-transition: .4s;
  transition: .4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 4px;
  bottom: 2px;
  background-color: #F1C40F;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider {
  background-color: #20014D;
}
input:focus + .slider {
  box-shadow: 0 0 1px #20014D;
}
input:checked + .slider:before {
  -webkit-transform: translateX(28px);
  -ms-transform: translateX(28px);
  transform: translateX(28px);
  background-color: #EF5B59;
}
.slider.round {
  border-radius: 40px;
  padding: 0;
}

.slider.round:before {
  border-radius: 50%;
}


/* ------------------------------------------------- */
/*Managing navbar as per theme start*/
[data-theme='dark'] .navbar {
  background: #343a40;
}
[data-theme='dark'] .navbar ul.menu li {
  color: #ddd;
}
[data-theme='dark'] .navbar ul.menu li:hover {
  color: #fff;
}
[data-theme='dark'] .navbar ul.menu li.active {
  color: #fff;
  font-weight: 500;
}
[data-theme='dark'] .navbar ul {
  background-color: #343a40;
}

[data-theme='dark'] .navbar button {
  color: #ffff;
}

[data-theme='dark'] .navbar .red-btn {
  color: var(--text);
  background-color: var(--lightBlue);
}

/*Maneging navbar as per theme ends*/

.navbar {
  display: flex;
  height: 80px;
  align-items: center;
  width: 100%;
  background: white;
}

.navbar #link-btn {
  cursor: pointer;
  color: black;
}

.logo {
  width: auto;
  height: 80px;
}

/* menu class unnecessary if .navbar .menu*/
/* .menu {
  display: flex;
  justify-content: flex-end !important;
} */

.navbar .menu {
  display: flex;
  flex: 1;
  justify-content: space-evenly;
  align-items: center;
  height: 100%;
  list-style: none;
  margin-bottom: 10px;
}

.navbar ul.menu li {
  cursor: pointer;
  /* margin-bottom: 60px; */
  /* line-height: 80px; */
  font-size: 1.5em;
  color: #423f3f;
  transition: all ease-in 0.1s;
}

.navbar ul.menu li:hover {
  color: #000000;
}

/* margins unnecessary */
/* .navbar ul.menu li + li {
  margin-left: 20px;
}
.navbar .menu li:last-child {
  margin-left: -30px;
} */

.navbar ul.menu li.active {
  color: #000000;
}

.navbar a {
  /* background: transparent; */
  color: #000000;
  font-size: 1em;
  /* padding: 5px 20px; */
}

/* Added elements for nav */

.navbar ul.menu li:hover {
  border-bottom: 2px solid;
  border-color: #fe6655;
  transform: translateY(-3%);
}

.navbar .user-forms a:last-child {
  margin-left: 20px;
}

/* manage drop-down for extra nav space */
.navbar .dropdown .drop-price,
.navbar .dropdown .drop-team {
  display: none;
}

@media only screen and (max-width: 1200px) {
  .navbar .dropdown .drop-price {
    display: block;
  }

  .navbar .menu-price {
    display: none;
  }
}

@media only screen and (max-width: 1000px) {
  .navbar .dropdown .drop-team {
    display: block;
  }

  .navbar .menu-team {
    display: none;
  }
}

.nav-button {
  cursor: pointer;
  width: 30px;
  height: 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  position: absolute;
  top: 0;
  right: 0;
  transform: translate(-50%, 50%);
}
.navbar button {
  background-color: transparent;
}
.nav-button span {
  width: 100%;
  background-color: var(--toggleBackground);
  height: 3px;
}





/* new header styling */
.red-btn {
  cursor: pointer;
  border: 2px solid var(--red);
  border-radius: 5px;
  color:var(--red);
  padding: 10px 15px !important;
  border-radius: 5px;
}

header {
  padding-top: 5px;
}

*:focus {
  outline: 0 !important;
}

.menu li:first-child {
  position: absolute;
  left: 8%;
}

.navbar ul li a button {
  background: transparent;
}

[data-theme='dark'] .navbar ul li a button {
  color: #fff;
}

.navbar ul li a button:hover {
  cursor: pointer;
}

.toggle-bar-mobile {
  margin: 5px 73px;
  width: 52px;
  height: 20px;
  background: var(--toggleBackground) !important;
  border-radius: 50px;
  position: absolute;
  cursor: pointer;
  top: 0;
  right: 0;
  transform: translate(-50%, 75%);
}

.red-btn:hover {
  color: #fff;
  background-color: var(--red);
  transition: 0.3s ease;
}

[data-theme='dark'] .red-btn:hover {
  color: #fff;
  background-color: var(--red);
  transition: 0.3s ease;
}

/* dropdown styling */
.dropbtn {
  background-color: var(--red);
  font-size: 16px;
  border: none;
  /* padding: 10px 20px 5px 20px!important; */
  border-radius: 5px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

#caret-down {
  margin-left: 3px;
}
.dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--mainBackground);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  border-radius: var(--br);
}

[data-theme='dark'] .dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--red);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  border-radius: var(--br);
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

[data-theme='dark'] .dropdown-content a {
  color: var(--text);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: var(--lightBlue);
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  color: #ec705d;
  transition: 0.3s ease;
}
/* end of dropdown styling */

@media only screen and (max-width: 900px) {
  .navbar {
    padding: 0 50px;
    background-color: white;
    z-index: 100;
  }

  .navbar button {
    /* display: block; */
    background-color: transparent;
  }
  .toggle-bar {
    display: none;
  }
  .navbar .menu {
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    top: 100px;
    left: 0;
    position: absolute;
    background-color: rgb(240, 234, 234);
    height: 0;
    width: 100%;
    overflow: hidden;
    transition: all ease-in-out 0.3s;
    -webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
  }

  .navbar ul.open {
    height: 500px;
  }

  /* restore menu items */
  .navbar .menu-price,
  .navbar .menu-team {
    display: initial;
  }

  .navbar .dropdown .drop-price,
  .navbar .dropdown .drop-team {
    display: none;
  }

  /* .navbar ul.menu li {
    margin-bottom: 30px;
    margin-top: 30px;
  } */

  .dropdown:hover .dropdown-content {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .navbar ul.menu li + li {
    margin-left: 0px;
  }
}

@media only screen and (min-width: 900px) {
  .nav-button {
    display: none;
    visibility: hidden;
  }
  .toggle-bar-mobile {
    display: none;
  }
  .navbar {
    padding: 2em;
    background-color: white;
  }

  .navbar ul.menu li {
    line-height: normal;
  }

  /* move to global */
  /* .navbar ul.menu li:hover {
    border-bottom: 1px solid;
    border-color: #FE6655;
    transform: translateY(-3%);
  } */
  .navbar span {
    padding: 3px;
  }
}

